Updates minimum stability to dev
Changes the minimum stability to "dev" and enables "prefer-stable".

This allows the project to use development versions of dependencies
while still preferring stable releases when available.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
       "email": "aditya.saktyawan@javan.co.id"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require-dev": {
     "phpunit/phpunit": "^10.5",
     "orchestra/testbench": "^8.0"
