Excludes tests directory from classmap
Prevents the inclusion of test files in the classmap
generation, improving performance and reducing potential
conflicts.

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
   "autoload": {
     "psr-4": {
       "Adithwidhiantara\\LaravelResponseFormatter\\": "src/"
-    }
+    },
+    "exclude-from-classmap": [
+      "tests/"
+    ]
   },
   "authors": [
     {
